--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/foxy/web_video_server
-	previous = 
-	base = fbcbf3d
+	previous = fbcbf3d
+	base = 8ed72a7
 	trim = 
 	trimbase = 
