--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/foxy/web_video_server
-	previous = 
-	base = 4c19605
+	previous = 4c19605
+	base = c4631c5
 	trim = 
 	trimbase = 
