--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/web_video_server
-	previous = 
-	base = ded3910
+	previous = ded3910
+	base = 58afc2f
 	trim = 
 	trimbase = 
