--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/web_video_server
-	previous = 
-	base = bce77d6
+	previous = bce77d6
+	base = 7e107bd
 	trim = 
 	trimbase = 
