--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/web_video_server
-	previous = 
-	base = cd34c8f
+	previous = cd34c8f
+	base = ecc9564
 	trim = 
 	trimbase = 
