--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/iron/web_video_server
-	previous = 
-	base = 2922f2b
+	previous = 2922f2b
+	base = edaf7a6
 	trim = 
 	trimbase = 
