--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/iron/web_video_server
-	previous = 
-	base = e55b354
+	previous = e55b354
+	base = 59a310b
 	trim = 
 	trimbase = 
