--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/iron/web_video_server
-	previous = 
-	base = 11879bb
+	previous = 11879bb
+	base = b7a49e0
 	trim = 
 	trimbase = 
