--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/web_video_server
-	previous = 
-	base = f5c0712
+	previous = f5c0712
+	base = 58eeb42
 	trim = 
 	trimbase = 
