--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/web_video_server
-	previous = 
-	base = 8d4f916
+	previous = 8d4f916
+	base = 6a2da73
 	trim = 
 	trimbase = 
