--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/web_video_server
-	previous = 
-	base = 124ab52
+	previous = 124ab52
+	base = 1988326
 	trim = 
 	trimbase = 
